(rule
 (targets decompress_bindings.ml gen_decompress.c decompress.h)
 (action (run ../generator/generate.exe .)))

(library
 (name gen_decompress_bindings)
 (modules gen_decompress_bindings)
 (wrapped false)
 (libraries decompress.zl ctypes.stubs))

(executable
 (name decompress)
 (modules decompress apply_bindings decompress_bindings)
 (forbidden_libraries unix)
 (foreign_stubs
  (language c) (names init gen_decompress))
 (ocamlopt_flags -ccopt -static -cclib -L/usr/lib/x86_64-linux-gnu)
 (modes (native object))
 (libraries gen_decompress_bindings checkseum.c ctypes.stubs))

(rule
 (targets libdecompress.a)
 (deps %{exe:decompress.exe.o})
 (action (run ar r %{targets} decompress.exe.o)))
